force-app/main/default/objects/Service_Sharing_Config__mdt/Service_Sharing_Config__mdt.object-meta.xml
<CustomObject>
    <description>Defines the configurations for the record sharing engine. Maps object types to their respective Apex handler classes, using text-based formulas to dynamically filter which records meet the sharing criteria.</description>
    <label>Service Sharing Config</label>
    <pluralLabel>Service Sharing Configs</pluralLabel>
</CustomObject>