force-app/main/default/objects/Service_Sharing_Config__mdt/fields/EvaluationFormula__c.field-meta.xml
<CustomField>
    <fullName>EvaluationFormula__c</fullName>
    <defaultValue>&quot;AND(&quot;+BR()
+&quot;  NOT(&quot;+BR()
+&quot;    ISBLANK(Id)&quot;+BR()
+&quot;  )&quot;+BR()
+&quot;)&quot;</defaultValue>
    <description>A text-based Salesforce formula evaluated at runtime. It must return a Boolean (True/False) value. Only records evaluating to True will be routed to the designated handler class.</description>
    <inlineHelpText>A text-based Salesforce formula evaluated at runtime. It must return a Boolean (True/False) value. Only records evaluating to True will be routed to the designated handler class.</inlineHelpText>
    <label>Evaluation Formula</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>