force-app/main/default/objects/Service_Sharing_Config__mdt/fields/HandlerClassName__c.field-meta.xml
<CustomField>
    <fullName>HandlerClassName__c</fullName>
    <description>The exact name of the Apex class responsible for executing the sharing logic. The specified class must implement the common sharing interface (e.g., ISharingHandler) to be instantiated correctly.</description>
    <inlineHelpText>The exact name of the Apex class responsible for executing the sharing logic. The specified class must implement the common sharing interface (e.g., ISharingHandler) to be instantiated correctly.</inlineHelpText>
    <label>Handler Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>