force-app/main/default/objects/Service_Sharing_Config__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this sharing configuration is currently active. If unchecked, the sharing service will bypass this rule during evaluation.</description>
    <inlineHelpText>Indicates whether this sharing configuration is currently active. If unchecked, the sharing service will bypass this rule during evaluation.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>