force-app/main/default/objects/Service_Sharing_Config__mdt/fields/SObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SObjectAPIName__c</fullName>
    <description>The API name of the triggering SObject used as the context for formula evaluation. Example: Use &apos;CaseManagers__c&apos; if changes to this object dictate how Case records should be shared.</description>
    <inlineHelpText>The API name of the triggering SObject used as the context for formula evaluation. Example: Use &apos;CaseManagers__c&apos; if changes to this object dictate how Case records should be shared.</inlineHelpText>
    <label>SObject API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>