force-app/main/default/objects/Service_Sharing_Config__mdt/validationRules/FormulaIsRequiredForActiveRules.validationRule-meta.xml
<ValidationRule>
    <fullName>FormulaIsRequiredForActiveRules</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    IsActive__c = true,
    OR(
        ISBLANK(EvaluationFormula__c),
        LEN(EvaluationFormula__c) = 0
    )
)</errorConditionFormula>
    <errorDisplayField>EvaluationFormula__c</errorDisplayField>
    <errorMessage>An active sharing configuration must have an Evaluation Formula to specify which records should be shared.</errorMessage>
</ValidationRule>